Find usable simulators

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,26 @@
+Metrics/AbcSize:
+  Max: 25
+
+Metrics/CyclomaticComplexity:
+  Max: 10
+
+Metrics/LineLength:
+  Max: 100
+
+Metrics/MethodLength:
+  Max: 30
+
+Style/AsciiComments:
+  Exclude:
+    - 'lib/fourflusher/executable.rb'
+
+Style/ClassVars:
+  Exclude:
+    - 'lib/fourflusher/find.rb'
+
 Style/Documentation:
   Exclude:
     - 'spec/**/*'
     - 'test/**/*'
-    - 'lib/fourflusher.rb'
     - 'lib/fourflusher/version.rb'
+    - 'lib/fourflusher/compat.rb'
