--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: ruby
 osx_image: xcode7.2
 rvm: 2.0.0-p598
 cache: bundler
+before_install: gem install bundler
 script:
   - bundle exec rake spec
   - bundle exec rake rubocop
